<resources>
    <string name="app_name">NutriiA</string>
    <string name="menu_target">Accueil\nObjectifs</string>
    <string name="menu_analysis">Analyse de journée</string>
    <string name="menu_meet">Chat IA Conseiller</string>
    <string name="menu_coach">Chat IA</string>
    <string name="menu_learn">Formation</string>
    <string name="side_navigation_target">Redéfinir mon objectif</string>
    <string name="side_navigation_health">Modifier mes informations santé</string>
    <string name="side_navigation_meet">Voir mes rendez-vous (en développement)</string>
    <string name="side_navigation_follow_daily">Suivi hebdomadaire (en développement)</string>
    <string name="side_navigation_follow_monthly">Suivi mensuel (en développement)</string>
    <string name="side_navigation_forum">Forum</string>
    <string name="side_navigation_invite_friends">Inviter des amis</string>
    <string name="legal_statements">Mentions légales</string>
    <string name="privacy_policy">Politique de confidentialité</string>
    <string name="menu_formations">Formations</string>
    <string name="title_tips_tricks">Conseils pour votre objectif</string>
    <string name="button_previous_tips_description">Conseil et astuce précédente</string>
    <string name="button_next_tips_description">Conseil et astuce suivante</string>
    <string name="title_more_precision">Plus de précision ?</string>
    <string name="optional">(optionnel)</string>
    <string name="weight">Poids</string>
    <string name="height">Taille</string>
    <string name="age">Âge</string>
    <string name="body_mass_index">Votre indice de masse corporelle : </string>
    <string name="ideal_weight">Poids idéal</string>
    <string name="give_more_precision">Si vous souhaitez des renseignements plus précis, veuillez nous renseigner votre profil.</string>
    <string name="give_more_precision_goal">Si vous souhaitez des renseignement plus précis, veuillez nous renseigner votre objectif.</string>
    <string name="fill_profile">Renseigner mon profil</string>
    <string name="fill_goal">Renseigner mon objectif</string>
    <string name="unknown_information">\?</string>
    <string name="no_information">Aucune information</string>
    <string name="recommended_daily_amount">Vos apports recommandés selon votre objectif et votre profil (réf. ANSES)</string>
    <string name="energy">Énergie</string>
    <string name="macronutrients">Macronutriments</string>
    <string name="micronutrients">Micronutriments</string>
    <string-array name="list_macronutrients">
        <item>@string/carbohydrates</item>
        <item>@string/proteins</item>
        <item>@string/lipids</item>
        <item>@string/sugars</item>
        <item>@string/saturated_fats</item>
        <item>@string/fibers</item>
    </string-array>
    <string name="carbohydrates">Glucides</string>
    <string name="proteins">Protéines</string>
    <string name="lipids">Lipides</string>
    <string name="sugars">Sucres</string>
    <string name="saturated_fats">Acides gras saturés</string>
    <string name="fibers">Fibres</string>
    <string-array name="list_micronutrients">
        <item>@string/salt</item>
        <item>@string/vitamin_a</item>
        <item>@string/vitamin_b_12</item>
        <item>@string/vitamin_c</item>
        <item>@string/vitamin_d</item>
        <item>@string/vitamin_e</item>
        <item>@string/vitamin_k</item>
        <item>@string/calcium</item>
        <item>@string/iron</item>
        <item>@string/magnesium</item>
        <item>@string/potassium</item>
        <item>@string/zinc</item>
    </string-array>
    <string name="salt">Sel</string>
    <string name="vitamin_a">Vitamine A</string>
    <string name="vitamin_b_12">Vitamine B 12</string>
    <string name="vitamin_c">Vitamine C</string>
    <string name="vitamin_d">Vitamine D</string>
    <string name="vitamin_e">Vitamine E</string>
    <string name="vitamin_k">Vitamine K</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Fer</string>
    <string name="magnesium">Magnésium</string>
    <string name="potassium">Potassium</string>
    <string name="zinc">Zinc</string>
    <string name="calories_unit">kcal</string>
    <string name="grams_unit">g</string>
    <string name="exemple_typical_day">Exemple d\'une journée type</string>
    <string name="breakfast">Petit-déjeuner</string>
    <string name="lunch">Déjeuner</string>
    <string name="dinner">Dîner</string>
    <string name="snack">Collation</string>
    <string name="give_me_new_menu">Propose moi un menu différent</string>
    <string name="set_my_meal_by_my_self">Rentrer mon propre menu</string>
    <string name="set_my_goal">Définir mon objectif ?</string>
    <string name="disconnect">Déconnexion</string>
    <string name="app_version">Version %s</string>
    <string name="macronutrients_of_my_day">Macronutriments du jour</string>
    <string name="micronutrients_of_my_day">Micronutriments du jour</string>
    <string name="goal">Objectif</string>
    <string name="dish_suggestion">Suggestions de plats</string>
    <string name="more_dish_suggestions">Plus de suggestions</string>
    <string name="composition_d_un_aliment">Composition d\'un aliment</string>
    <string name="validate_my_day">Valider ma journée</string>
    <string name="my_real_day">Mon alimentation du jour</string>
    <string name="welcolme_message">Bonjour, vous souhaitez découvrir l\'application !</string>
    <string name="enter_something_to_eat">Entrez un plat ou un aliment</string>
    <string name="show_composition">Voir la composition</string>
    <string name="your_information">Veuillez entrer vos informations</string>
    <string name="no_goal_text">Adopter une Nutrition Santé</string>
    <string name="lose_weight_text">Perte de poids</string>
    <string name="gain_muscle_text">Prise de muscles</string>
    <string name="shape_text">Remise en forme</string>
    <string name="sleep_quality_text">Qualité sommeil</string>
    <string-array name="goals">
        <item>Nutrition santé</item>
        <item>Perte de poids</item>
        <item>Prise de muscles</item>
        <item>Remise en forme</item>
        <item>Qualité du sommeil</item>
    </string-array>
    <string-array name="welcome_messages">
        <item>Bonjour, vous souhaitez avoir des conseils en nutrition santé !</item>
        <item>Bonjour, vous souhaitez perdre du poids !</item>
        <item>Bonjour, vous souhaitez prendre du muscle !</item>
        <item>Bonjour, vous souhaitez vous remettre en forme !</item>
        <item>Bonjour, vous souhaitez avoir un meilleur sommeil !</item>
    </string-array>
    <string-array name="icons_goals">
        <item>menu_icon_target_outline_old</item>
        <item>icon_goal_weight_lost</item>
        <item>icon_goal_muscle_gain</item>
        <item>icon_goal_shape</item>
        <item>icon_goal_sleep_quality</item>
    </string-array>
    <string-array name="goals_descriptions">
        <item>Découvrir sans objectif</item>
        <item>L\'objectif de la perte de poids est de perdre du poids de manière saine et durable afin d\'améliorer la santé globale, la mobilité et la confiance en soi. En adoptant des habitudes alimentaires équilibrées et en intégrant des exercices physiques réguliers, vous pouvez atteindre et maintenir un poids optimal pour votre bien-être.</item>
        <item>L\'objectif de la prise de muscle est de gagner en masse musculaire tout en réduisant la proportion de graisse corporelle. En combinant un régime alimentaire riche en protéines avec un programme d\'entraînement de musculation ciblé, vous pouvez développer une musculature plus définie, améliorer la force et la résistance, et favoriser un métabolisme plus actif.</item>
        <item>L\'objectif de la remise en forme est d\'améliorer la santé cardiovasculaire, la force, la flexibilité et l\'endurance physique. En adoptant un mode de vie actif et équilibré, comprenant une alimentation saine et variée ainsi qu\'une pratique régulière d\'exercices cardiovasculaires, de musculation et de flexibilité, vous pouvez renforcer votre système immunitaire, réduire le risque de maladies chroniques et augmenter votre niveau d\'énergie quotidien.</item>
        <item>L\'objectif de la qualité de sommeil est d\'améliorer la durée, la profondeur et la régularité du sommeil pour favoriser une récupération optimale du corps et de l\'esprit. En adoptant des habitudes de sommeil saines, telles que maintenir un horaire régulier de coucher et de lever, créer un environnement propice au sommeil dans la chambre à coucher, et pratiquer des techniques de relaxation avant le coucher, vous pouvez améliorer la qualité de votre sommeil et bénéficier d\'une meilleure santé physique et mentale.</item>
    </string-array>
    <string-array name="tips_titles">
        <item>Alimentation</item>
        <item>Activité</item>
        <item>Récupération</item>
    </string-array>
    <string-array name="tips_names">
        <item>tips_feed</item>
        <item>tips_activity</item>
        <item>tips_recovery</item>
    </string-array>
    <string-array name="tips_feed">
        <item>Optez pour des repas équilibrés en incluant des protéines maigres, des grains entiers et beaucoup de légumes. Évitez les sucres ajoutés et les aliments ultra-transformés.</item>
        <item>Mangez plus de légumes, des viandes maigres, et des aliments complets comme le riz brun. Évitez les sodas et les boissons sucrées.</item>
        <item>Mangez des protéines à chaque repas, comme du poulet, du poisson ou des œufs, et ajoutez des légumes et des glucides comme le riz ou les pâtes complètes.</item>
        <item>Mangez des repas équilibrés avec des légumes, des protéines maigres (comme du poulet ou du poisson), et des glucides complets (comme le riz brun ou les patates douces).</item>
        <item>Évitez les repas lourds et riches en graisses avant de vous coucher. Optez pour des aliments légers comme des fruits, des légumes ou des yaourts.</item>
    </string-array>
    <string-array name="tips_activity">
        <item>Intégrez au moins 30 minutes d\'exercice modéré par jour, comme la marche rapide, pour améliorer votre santé cardiovasculaire et maintenir un poids sain.</item>
        <item>Faites des exercices courts et intenses, comme des sprints ou des sauts, 3 à 4 fois par semaine. Cela aide à brûler plus de calories.</item>
        <item>Faites des exercices de musculation, comme des squats, des pompes et des soulevés de terre, 3 à 4 fois par semaine. Augmentez progressivement la charge.</item>
        <item>Faites 30 minutes d\'exercice modéré, comme la marche rapide, le vélo ou la natation, 5 jours par semaine pour améliorer votre forme physique.</item>
        <item>Faites de l\'exercice régulièrement, mais évitez les séances intenses trop près de l\'heure du coucher. Une activité physique modérée favorise un meilleur sommeil.</item>
    </string-array>
    <string-array name="tips_recovery">
        <item>Assurez-vous de dormir 7 à 9 heures par nuit pour permettre à votre corps de récupérer et renforcer votre système immunitaire.</item>
        <item>Dormez entre 7 et 9 heures par nuit. Un bon sommeil aide à contrôler votre faim et à récupérer après l\'exercice.</item>
        <item>Accordez-vous entre 7 et 9 heures de sommeil chaque nuit pour favoriser la récupération musculaire et la croissance optimales.</item>
        <item>Dormez suffisamment chaque nuit, idéalement entre 7 et 9 heures, pour permettre à votre corps de se reposer et de récupérer, favorisant ainsi une meilleure remise en forme.</item>
        <item>Créez une routine relaxante avant d\'aller dormir, comme lire un livre, prendre un bain chaud ou méditer. Évitez les écrans au moins une heure avant de vous coucher.</item>
    </string-array>
    <string name="more_details">Plus de détails</string>
</resources>