<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/side_navigation_target"
        android:title="@string/side_navigation_target" />

    <item
        android:id="@+id/side_navigation_sante"
        android:title="@string/side_navigation_health" />

    <item
        android:id="@+id/side_navigation_meet"
        android:title="@string/side_navigation_meet" />

    <item
        android:id="@+id/side_navigation_follow_daily"
        android:title="@string/side_navigation_follow_daily" />

    <item
        android:id="@+id/side_navigation_follow_monthly"
        android:title="@string/side_navigation_follow_monthly" />

    <item
        android:id="@+id/side_navigation_forum"
        android:title="@string/side_navigation_forum" />
    <item
        android:id="@+id/side_navigation_invite_friends"
        android:title="@string/side_navigation_invite_friends" />
</menu>