<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/component_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_my_goal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_optional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optional"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/component_title" />


    <TextView
        android:id="@+id/give_more_precision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_more_precision_goal"
        app:layout_constraintTop_toBottomOf="@id/title_optional"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_goal"
        app:layout_constraintTop_toBottomOf="@id/give_more_precision"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>