<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/component_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_my_goal"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_optional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_light"
        android:textStyle="italic"
        android:text="@string/optional"
        android:textSize="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginStart="5sp"
        android:layout_marginBottom="5sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/component_title"
        app:layout_constraintBottom_toTopOf="@id/give_more_precision"/>


    <TextView
        android:id="@+id/give_more_precision"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/give_more_precision_goal"
        android:justificationMode="inter_word"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toBottomOf="@id/component_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/define_goal"
        android:text="@string/fill_profile"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@id/give_more_precision"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:minHeight="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="@color/orange"/>

</androidx.constraintlayout.widget.ConstraintLayout>