<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/component_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommended_daily_amount"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/component_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/detailsButton"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/energy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/energy"
                    android:fontFamily="@font/montserrat"
                    android:layout_marginStart="50dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/energy_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_information"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:fontFamily="@font/montserrat"
                    android:textSize="16sp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/orange"
                    />

                <TextView
                    android:id="@+id/energy_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories_unit"
                    android:fontFamily="@font/montserrat"
                    android:textSize="16sp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/orange"
                    android:gravity="end" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/fibers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fibers"
                    android:fontFamily="@font/montserrat"
                    android:layout_marginStart="50dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/fibers_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_information"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:fontFamily="@font/montserrat"
                    android:textSize="16sp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/orange"
                    />

                <TextView
                    android:id="@+id/fibers_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grams_unit"
                    android:fontFamily="@font/montserrat"
                    android:textSize="16sp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/orange"
                    android:gravity="end" />

            </LinearLayout>

            <TextView
                android:id="@+id/macronutrients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/macronutrients"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/energy_layout"
                app:layout_constraintStart_toStartOf="@+id/amounts_layout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/macronutrients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/macronutrients"
                app:layout_constraintStart_toStartOf="@+id/amounts_layout"/>

            <TextView
                android:id="@+id/micronutrients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/micronutrients"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/macronutrients"
                app:layout_constraintStart_toStartOf="@+id/amounts_layout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/micronutrients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/micronutrients"
                app:layout_constraintStart_toStartOf="@+id/amounts_layout"/>



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/detailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_details"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:textSize="13sp"
            android:layout_marginEnd="3dp"
            />

        <ImageView
            android:id="@+id/arrowDetails"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            android:rotation="90"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>